// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allow-html prop 1`] = `<div class="ghb-dialog__message">&lt;span&gt;text&lt;/span&gt;</div>`;

exports[`button color 1`] = `
<div role="dialog" tabindex="0" class="ghb-dialog" name="ghb-dialog-bounce">
  <div class="ghb-hairline--top ghb-dialog__footer"><button type="button" class="ghb-button ghb-button--default ghb-button--large ghb-dialog__cancel" style="color: white;">
      <div class="ghb-button__content"><span class="ghb-button__text">取消</span></div>
    </button><button type="button" class="ghb-button ghb-button--default ghb-button--large ghb-dialog__confirm ghb-hairline--left" style="color: red;">
      <div class="ghb-button__content"><span class="ghb-button__text">确认</span></div>
    </button></div>
</div>
`;

exports[`button text 1`] = `
<div role="dialog" tabindex="0" class="ghb-dialog" name="ghb-dialog-bounce">
  <div class="ghb-hairline--top ghb-dialog__footer"><button type="button" class="ghb-button ghb-button--default ghb-button--large ghb-dialog__cancel">
      <div class="ghb-button__content"><span class="ghb-button__text">Custom cancel</span></div>
    </button><button type="button" class="ghb-button ghb-button--default ghb-button--large ghb-dialog__confirm ghb-hairline--left">
      <div class="ghb-button__content"><span class="ghb-button__text">Custom confirm</span></div>
    </button></div>
</div>
`;

exports[`default slot 1`] = `
<div role="dialog" tabindex="0" class="ghb-dialog" name="ghb-dialog-bounce">
  <div class="ghb-dialog__content">Custom Message</div>
  <div class="ghb-hairline--top ghb-dialog__footer"><button type="button" class="ghb-button ghb-button--default ghb-button--large ghb-dialog__confirm">
      <div class="ghb-button__content"><span class="ghb-button__text">确认</span></div>
    </button></div>
</div>
`;

exports[`title slot 1`] = `
<div role="dialog" tabindex="0" class="ghb-dialog" name="ghb-dialog-bounce">
  <div class="ghb-dialog__header ghb-dialog__header--isolated">Custom Title</div>
  <div class="ghb-hairline--top ghb-dialog__footer"><button type="button" class="ghb-button ghb-button--default ghb-button--large ghb-dialog__confirm">
      <div class="ghb-button__content"><span class="ghb-button__text">确认</span></div>
    </button></div>
</div>
`;
